--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "svelte": "^3.0.0"
   },
   "dependencies": {
-    "sirv-cli": "^1.0.6"
+    "express": "^4.17.1",
+    "sirv-cli": "^1.0.6",
+    "svelte-router-spa": "^5.7.3"
   }
 }
